[fix] simple theme: unset width for images on mobile layout
* fix fallout from 2fbedc4316b4e8a8bce8bb9506f59aa61e1a2666
-> similar to 14fb187548a58144c5cd13c9292fcc52f5a025c5
* change: set image height to 10rem
-> this is in my opinion more sensible size for mobile

--- a/searx/static/themes/simple/src/less/style.less
+++ b/searx/static/themes/simple/src/less/style.less
@@ -1108,6 +1108,7 @@ summary.title {
     margin: 0;
     height: @results-image-row-height-phone;
     background: var(--color-base-background-mobile);
+    width: unset;
   }
 
   .infobox {
